# SDLExampleProject

./: .gitignore  README.md  SDLExample.cbp
learning/: learning.cbp  main.cpp
learning/Adder Tree/: Adder Tree.cbp  main.cpp
learning/Adder Tree/include/: Node.h  PlusNode.h  ValueNode.h
learning/Adder Tree/src/: Node.cpp  PlusNode.cpp  ValueNode.cpp
learning/LinkedList/: LinkedList.cbp  main.cpp
learning/LinkedList/include/: Element.h
learning/LinkedList/src/: Element.cpp
learning/include/: Number.h
learning/src/: Number.cpp
pong/: AI.cpp  AI.h  Ball.cpp  Ball.h  Bar.cpp  Bar.h  CMakeLists.txt  Define.h  Event.cpp  Event.h  FPS.cpp  FPS.h  Makefile  Pong.cpp  Pong.h  Pong_Events.cpp  Surface.cpp  Surface.h
src/: Makefile  main.cpp
tutorial/: CAnimation.cpp  CAnimation.h  CApp  CApp.cpp  CApp.h  CApp.h.gch  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnRender.cpp  CArea.cpp  CArea.h  CCamera.cpp  CCamera.h  CEntity.cpp  CEntity.h  CEntityCol.cpp  CEvent.cpp  CEvent.h  CFPS.cpp  CFPS.h  CMap.cpp  CMap.h  CPlayer.cpp  CPlayer.h  CSurface.cpp  CSurface.h  CTile.cpp  CTile.h  Define.h  Makefile  tutorial.cbp
tutorial/maps/: 1.area  1.map
